# meshcore-cpp-decoder

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/meshcore/: meshcore.h
include/meshcore/crypto/: channel_crypto.h  ed25519.h  key_manager.h
include/meshcore/decoder/: packet_decoder.h
include/meshcore/decoder/payload_decoders/: ack.h  advert.h  anon_request.h  control.h  group_text.h  path.h  request.h  response.h  text_message.h  trace.h
include/meshcore/types/: enums.h  packet.h  payloads.h
include/meshcore/utils/: auth_token.h  base64.h  enum_names.h  hex.h
src/: cli.cpp
src/crypto/: channel_crypto.cpp  ed25519.cpp  key_manager.cpp
src/decoder/: packet_decoder.cpp
src/decoder/payload_decoders/: ack.cpp  advert.cpp  anon_request.cpp  control.cpp  group_text.cpp  path.cpp  request.cpp  response.cpp  text_message.cpp  trace.cpp
src/types/: enums.cpp
src/utils/: auth_token.cpp  base64.cpp  enum_names.cpp  hex.cpp
tests/: test_advert.cpp  test_crypto.cpp  test_decode.cpp  test_grouptext.cpp  test_trace.cpp
